Product Item hover, cart-btn, sweep-to-top, Still need to fix columns and spacing

--- a/client/src/components/CategoryMenu/CategoryMenuStyles.css
+++ b/client/src/components/CategoryMenu/CategoryMenuStyles.css
@@ -12,6 +12,7 @@
     /* font-family: 'Kirang Haerang', cursive; */
     font-family: 'Gloria Hallelujah', cursive;
     border-radius: 0;
+    outline: none;
     border-color: #16ffbd;
     margin-bottom: 5px;
     margin-right: 5px;
